add swagger in shop
