# app/Http/Controllers/ShopController.php
@@ -14,6 +14,40 @@ class ShopController extends Controller
 {
     use StringHelper;
 
+    /**
+     * @OA\Get(
+     *      path="/api/v2/admin/shops",
+     *      operationId="getShopLists",
+     *      tags={"Shops"},
+     *      summary="Get list of shops",
+     *      description="Returns list of shops",
+     *      @OA\Parameter(
+     *          name="page",
+     *          description="Current Page",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          ),
+     *      ),
+     *      @OA\Parameter(
+     *          name="filter",
+     *          description="Filter",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *      ),
+     *      security={
+     *          {"bearerAuth": {}}
+     *      }
+     *)
+     */
     public function index(Request $request)
     {
         return Shop::with('availableCategories', 'availableTags')
@@ -23,6 +57,31 @@ class ShopController extends Controller
             ->paginate(10);
     }
 
+
+     /**
+     * @OA\Post(
+     *      path="/api/v2/admin/shops",
+     *      operationId="storeShop",
+     *      tags={"Shops"},
+     *      summary="Create a Shop",
+     *      description="Returns newly created shop",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          description="Created shop object",
+     *          @OA\MediaType(
+     *              mediaType="applications/json",
+     *              @OA\Schema(ref="#/components/schemas/Shop")
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *      ),
+     *      security={
+     *          {"bearerAuth": {}}
+     *      }
+     *)
+     */
     public function store(Request $request)
     {
         $request['slug'] = $this->generateUniqueSlug();
@@ -62,11 +121,70 @@ class ShopController extends Controller
         return response()->json($shop->refresh()->load(['availableTags', 'availableCategories']), 201);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/v2/admin/shops/{slug}",
+     *      operationId="showShop",
+     *      tags={"Shops"},
+     *      summary="Get One Shop",
+     *      description="Returns a requested shop",
+     *      @OA\Parameter(
+     *          name="slug",
+     *          description="Slug of a requested shop",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *      ),
+     *      security={
+     *          {"bearerAuth": {}}
+     *      }
+     *)
+     */
     public function show($slug)
     {
         $shop = Shop::with('availableCategories', 'availableTags', 'township')->where('slug', $slug)->firstOrFail();
         return response()->json($shop, 200);
     }
+
+    /**
+     * @OA\Put(
+     *      path="/api/v2/admin/shops/{slug}",
+     *      operationId="updateShop",
+     *      tags={"Shops"},
+     *      summary="Update a Shop",
+     *      description="Update a requested shop",
+     *      @OA\Parameter(
+     *          name="slug",
+     *          description="Slug to identify a shop",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\RequestBody(
+     *          required=true,
+     *          description="New shop data to be updated.",
+     *          @OA\MediaType(
+     *              mediaType="applications/json",
+     *              @OA\Schema(ref="#/components/schemas/Shop")
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *      ),
+     *      security={
+     *          {"bearerAuth": {}}
+     *      }
+     *)
+     */
 
     public function update(Request $request, $slug)
     {
@@ -108,11 +226,62 @@ class ShopController extends Controller
         return response()->json($shop->load(['availableCategories', 'availableTags']), 201);
     }
 
+    /**
+     * @OA\Delete(
+     *      path="/api/v2/admin/shops/{slug}",
+     *      operationId="deleteShop",
+     *      tags={"Shops"},
+     *      summary="Delete One Shop",
+     *      description="Delete one specific shop",
+     *      @OA\Parameter(
+     *          name="slug",
+     *          description="Slug of a requested shop",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *      ),
+     *      security={
+     *          {"bearerAuth": {}}
+     *      }
+     *)
+     */
     public function destroy($slug)
     {
         Shop::where('slug', $slug)->firstOrFail()->delete();
         return response()->json(['message' => 'Successfully deleted.'], 200);
     }
+
+    /**
+     * @OA\Patch(
+     *      path="/api/v2/admin/shops/toggle-enable/{slug}",
+     *      operationId="toggleEnable",
+     *      tags={"Shops"},
+     *      summary="Toggle Enable a Shop",
+     *      description="Toggle Enable a requested shop",
+     *      @OA\Parameter(
+     *          name="slug",
+     *          description="Slug to identify a shop",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *      ),
+     *      security={
+     *          {"bearerAuth": {}}
+     *      }
+     *)
+     */
 
     public function toggleEnable($slug)
     {
@@ -122,6 +291,31 @@ class ShopController extends Controller
         return response()->json(['message' => 'Success.'], 200);
     }
 
+    /**
+     * @OA\Patch(
+     *      path="/api/v2/admin/shops/toggle-official/{slug}",
+     *      operationId="toggleOfficial",
+     *      tags={"Shops"},
+     *      summary="Toggle Official a Shop",
+     *      description="Toggle Official a requested shop",
+     *      @OA\Parameter(
+     *          name="slug",
+     *          description="Slug to identify a shop",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation"
+     *      ),
+     *      security={
+     *          {"bearerAuth": {}}
+     *      }
+     *)
+     */
     public function toggleOfficial($slug)
     {
         $shop = Shop::where('slug', $slug)->firstOrFail();
@@ -130,10 +324,12 @@ class ShopController extends Controller
         return response()->json(['message' => 'Success.'], 200);
     }
 
+
     private function getTownshipIdBySlug($slug)
     {
         return Township::where('slug', $slug)->first()->id;
     }
+
 
     public function addShopCategories(Request $request, $slug)
     {
